--- a/_config.yml
+++ b/_config.yml
@@ -276,3 +276,14 @@ defaults:
       comments: false # true
       share: true
       related: true
+  # pages
+  - scope:
+      path: "_pages/"
+      type: pages
+    values:
+      layout: single
+      author_profile: false
+      read_time: true
+      comments: false # true
+      share: true
+      related: true
