feat: adding solutions pages
Signed-off-by: DoubleFree <doublefreein@gmail.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # main links
 main:
+  - title: "Solutions"
+    url: /solutions
   #- title: "Blogs"
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   #- title: "Careers"
