--- a/_config.yml
+++ b/_config.yml
@@ -267,7 +267,7 @@ compress_html:
 defaults:
   # pages
   - scope:
-      path: "_pages/"
+      path: ""
       type: pages
     values:
       layout: single
