feat: updating post llp
Signed-off-by: Doublefree <doublefreein@x.com>

--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ minimal_mistakes_skin    : "sunrise" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Doublefree"
 title_separator          : "-"
-subtitle                 : "Absolute Freedom"
+subtitle                 : "Freedom in Method. Freedom in Impact."
 name                     : "Doublefree.in"
-description              : "Ethical, Secure, Open-Source, Copyleft, Privacy-Focused, and Scalable Solutions"
+description              : "True progress arises from systems that are both liberating and regenerative"
 url                      : "https://doublefree.in"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "doublefreein/doublefreein.github.io"
